Time: 28 ms (81.89%) | Memory: 51.2 MB (73.22%) - LeetSync