@@ -1,34 +1,38 @@
 class Solution {
     public List<List<Integer>> threeSum(int[] nums) {
-        List<List<Integer>> result = new ArrayList<>();
         Arrays.sort(nums);
+
+        List<List<Integer>> results = new ArrayList<>();
+
         for (int i = 0; i < nums.length - 2; i++) {
+            int currNumber = nums[i];
             if (i > 0 && nums[i] == nums[i - 1]) {
                 continue;
             }
-
             int left = i + 1;
             int right = nums.length - 1;
 
             while (left < right) {
-                int total = nums[i] + nums[left] + nums[right];
-                if (total > 0) {
-                    right--;
-                } else if (total < 0) {
-                    left++;
-                } else {
-                    result.add(new ArrayList<>(List.of(nums[i], nums[left], nums[right])));
+                int total = currNumber + nums[left] + nums[right];
+
+                if (total == 0) {
+                    results.add(Arrays.asList(currNumber, nums[left], nums[right]));
                     left++;
                     right--;
-                    while (left < right && nums[left] == nums[left - 1]) {
+                    while (left < right && nums[left - 1] == nums[left]) {
                         left++;
                     }
-                    while (left < right && nums[right] == nums[right + 1]) {
+                    while (left < right - 1 && nums[right + 1] == nums[right]) {
                         right--;
                     }
+                } else if (total > 0) {
+                    right--;
+                } else {
+                    left++;
                 }
             }
         }
-        return result;
+
+        return results;
     }
 }
